@@ -1,13 +1,17 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.adjourncase;
 
+import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
 import static org.apache.commons.lang3.StringUtils.stripToEmpty;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.isYes;
+import static uk.gov.hmcts.reform.sscs.util.SscsUtil.IN_CHAMBERS;
+import static uk.gov.hmcts.reform.sscs.util.SscsUtil.getLastValidHearing;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,16 +27,21 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.Adjournment;
 import uk.gov.hmcts.reform.sscs.ccd.domain.CollectionItem;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DocumentLink;
 import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
-import uk.gov.hmcts.reform.sscs.ccd.domain.Hearing;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.IssueNoticeHandler;
+import uk.gov.hmcts.reform.sscs.config.DocumentConfiguration;
 import uk.gov.hmcts.reform.sscs.docassembly.GenerateFile;
 import uk.gov.hmcts.reform.sscs.model.VenueDetails;
+import uk.gov.hmcts.reform.sscs.model.client.JudicialUserBase;
 import uk.gov.hmcts.reform.sscs.model.docassembly.AdjournCaseTemplateBody;
 import uk.gov.hmcts.reform.sscs.model.docassembly.AdjournCaseTemplateBody.AdjournCaseTemplateBodyBuilder;
 import uk.gov.hmcts.reform.sscs.model.docassembly.NoticeIssuedTemplateBody;
 import uk.gov.hmcts.reform.sscs.model.docassembly.NoticeIssuedTemplateBody.NoticeIssuedTemplateBodyBuilder;
-import uk.gov.hmcts.reform.sscs.service.LanguageService;
+import uk.gov.hmcts.reform.sscs.reference.data.model.Language;
+import uk.gov.hmcts.reform.sscs.reference.data.service.SignLanguagesService;
+import uk.gov.hmcts.reform.sscs.service.AirLookupService;
+import uk.gov.hmcts.reform.sscs.service.JudicialRefDataService;
 import uk.gov.hmcts.reform.sscs.service.UserDetailsService;
 import uk.gov.hmcts.reform.sscs.service.VenueDataLoader;
 import uk.gov.hmcts.reform.sscs.utility.StringUtils;
@@ -40,30 +49,37 @@ import uk.gov.hmcts.reform.sscs.utility.StringUtils;
 @Component
 @Slf4j
 public class AdjournCasePreviewService extends IssueNoticeHandler {
-
     private final VenueDataLoader venueDataLoader;
-    private final LanguageService languageService;
+    private final JudicialRefDataService judicialRefDataService;
     private static final String DOCUMENT_DATE_PATTERN = "dd/MM/yyyy";
-    public static final String IN_CHAMBERS = "In chambers";
+    private final SignLanguagesService signLanguagesService;
+    private final AirLookupService airLookupService;
+    @Value("${feature.snl.adjournment.enabled}")
+    private boolean adjournmentFeature;
 
     @Autowired
-    public AdjournCasePreviewService(GenerateFile generateFile, UserDetailsService userDetailsService, VenueDataLoader venueDataLoader,
-                                     LanguageService languageService, @Value("${doc_assembly.adjourn_case}") String templateId) {
-        super(generateFile, userDetailsService, languagePreference -> templateId);
+    public AdjournCasePreviewService(GenerateFile generateFile,
+                                     UserDetailsService userDetailsService,
+                                     VenueDataLoader venueDataLoader,
+                                     @Value("${doc_assembly.adjourn_case}") String templateId,
+                                     AirLookupService airLookupService,
+                                     SignLanguagesService signLanguagesService,
+                                     JudicialRefDataService judicialRefDataService,
+                                     DocumentConfiguration documentConfiguration) {
+        super(generateFile, userDetailsService, languagePreference -> templateId, documentConfiguration);
         this.venueDataLoader = venueDataLoader;
-        this.languageService = languageService;
+        this.airLookupService = airLookupService;
+        this.signLanguagesService = signLanguagesService;
+        this.judicialRefDataService = judicialRefDataService;
     }
 
     @Override
-    protected NoticeIssuedTemplateBody createPayload(
-        PreSubmitCallbackResponse<SscsCaseData> response,
-        SscsCaseData caseData,
-        String documentTypeLabel,
-        LocalDate dateAdded,
-        LocalDate generatedDate,
-        boolean isScottish,
-        String userAuthorisation
-    ) {
+    protected NoticeIssuedTemplateBody createPayload(PreSubmitCallbackResponse<SscsCaseData> response,
+                                                     SscsCaseData caseData, String documentTypeLabel,
+                                                     LocalDate dateAdded, LocalDate generatedDate,
+                                                     boolean isScottish, boolean isPostHearingsEnabled,
+                                                     boolean isPostHearingsBEnabled,
+                                                     String userAuthorisation) {
         Adjournment adjournment = caseData.getAdjournment();
         NoticeIssuedTemplateBody formPayload = super.createPayload(
             response,
@@ -72,6 +88,8 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
             dateAdded,
             adjournment.getGeneratedDate(),
             isScottish,
+            isPostHearingsEnabled,
+            isPostHearingsBEnabled,
             userAuthorisation);
         AdjournCaseTemplateBodyBuilder adjournCaseBuilder = AdjournCaseTemplateBody.builder();
 
@@ -82,19 +100,20 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
 
         adjournCaseBuilder.heldBefore(buildHeldBefore(caseData, userAuthorisation));
 
-        String venueName = setHearings(adjournCaseBuilder, caseData);
+        setHearings(adjournCaseBuilder, caseData);
+        String venueName = caseData.getProcessingVenue();
         adjournCaseBuilder.appellantName(buildName(caseData, false));
 
         if (adjournment.getReasons() != null && !adjournment.getReasons().isEmpty()) {
             adjournCaseBuilder.reasonsForDecision(
-                adjournment.getReasons().stream().map(CollectionItem::getValue).collect(Collectors.toList()));
+                adjournment.getReasons().stream().map(CollectionItem::getValue).toList());
         } else {
             adjournCaseBuilder.reasonsForDecision(null);
         }
 
         if (adjournment.getAdditionalDirections() != null) {
             adjournCaseBuilder.additionalDirections(adjournment.getAdditionalDirections().stream()
-                .map(CollectionItem::getValue).collect(Collectors.toList()));
+                .map(CollectionItem::getValue).toList());
         }
 
         String hearingType = adjournment.getTypeOfHearing() != null
@@ -102,7 +121,6 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
             : null;
 
         adjournCaseBuilder.hearingType(hearingType);
-
         HearingType nextHearingType = HearingType.getByKey(String.valueOf(adjournment.getTypeOfNextHearing()));
 
         if (HearingType.FACE_TO_FACE.equals(nextHearingType)) {
@@ -155,13 +173,12 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
 
     private void handleFaceToFaceHearing(Adjournment adjournment, AdjournCaseTemplateBodyBuilder adjournCaseBuilder, String venueName) {
         if (adjournment.getNextHearingVenue() == AdjournCaseNextHearingVenue.SOMEWHERE_ELSE) {
-            if (adjournment.getNextHearingVenueSelected() != null
-                && adjournment.getNextHearingVenueSelected().getValue() != null
-                && adjournment.getNextHearingVenueSelected().getValue().getCode() != null
-            ) {
+            if (nonNull(adjournment.getNextHearingVenueSelected())
+                && nonNull(adjournment.getNextHearingVenueSelected().getValue())
+                && nonNull(adjournment.getNextHearingVenueSelected().getValue().getCode())) {
                 VenueDetails venueDetails = venueDataLoader.getVenueDetailsMap().get(
-                    adjournment.getNextHearingVenueSelected().getValue().getCode());
-                if (venueDetails == null) {
+                        adjournment.getNextHearingVenueSelected().getValue().getCode());
+                if (isNull(venueDetails)) {
                     throw new IllegalStateException("Unable to load venue details for id:"
                         + adjournment.getNextHearingVenueSelected().getValue().getCode());
                 }
@@ -171,17 +188,35 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
                 throw new IllegalStateException("A next hearing venue of somewhere else has been specified but no venue has been selected");
             }
         } else {
-            adjournCaseBuilder.nextHearingAtVenue(!IN_CHAMBERS.equals(venueName));
+            Integer venueId = airLookupService.lookupVenueIdByAirVenueName(venueName);
+
+            if (nonNull(venueId)) {
+                VenueDetails venueDetails = venueDataLoader.getVenueDetailsMap().get(venueId.toString());
+
+                if (nonNull(venueDetails)) {
+                    adjournCaseBuilder.nextHearingVenue(venueDetails.getGapsVenName());
+                    adjournCaseBuilder.nextHearingAtVenue(true);
+
+                    return;
+                }
+            }
+
             adjournCaseBuilder.nextHearingVenue(venueName);
+            adjournCaseBuilder.nextHearingAtVenue(!IN_CHAMBERS.equals(venueName));
         }
     }
 
     private void setIntepreterDescriptionIfRequired(AdjournCaseTemplateBodyBuilder adjournCaseBuilder, SscsCaseData caseData) {
         if (isYes(caseData.getAdjournment().getInterpreterRequired())) {
             if (caseData.getAdjournment().getInterpreterLanguage() != null) {
-                adjournCaseBuilder.interpreterDescription(
-                    languageService.getInterpreterDescriptionForLanguageKey(
-                        caseData.getAdjournment().getInterpreterLanguage()));
+                String languageLabel = caseData.getAdjournment().getInterpreterLanguage().getValue().getLabel();
+                String languageKey = caseData.getAdjournment().getInterpreterLanguage().getValue().getCode();
+                Language hmrcRefLanguage = signLanguagesService.getLanguageByHmcReference(languageKey);
+                String interpreterDescription = String.format("an interpreter in %s", languageLabel);
+                if (nonNull(hmrcRefLanguage)) {
+                    interpreterDescription = String.format("a sign language interpreter (%s)", languageLabel);
+                }
+                adjournCaseBuilder.interpreterDescription(interpreterDescription);
             } else {
                 throw new IllegalStateException("An interpreter is required but no language is set");
             }
@@ -285,28 +320,26 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
         }
     }
 
-    protected String setHearings(AdjournCaseTemplateBodyBuilder adjournCaseBuilder, SscsCaseData caseData) {
-        String venue = IN_CHAMBERS;
-        if (CollectionUtils.isNotEmpty(caseData.getHearings())) {
-            Hearing finalHearing = caseData.getHearings().get(0);
-            if (finalHearing != null && finalHearing.getValue() != null) {
-                if (finalHearing.getValue().getHearingDate() != null) {
-                    adjournCaseBuilder.heldOn(LocalDate.parse(finalHearing.getValue().getHearingDate()));
-                }
-                if (finalHearing.getValue().getVenue() != null) {
-                    String venueName = venueDataLoader.getGapVenueName(finalHearing.getValue().getVenue(),
-                            finalHearing.getValue().getVenueId());
-                    if (venueName != null) {
-                        adjournCaseBuilder.heldAt(venueName);
-                        venue = venueName;
-                    }
+    protected void setHearings(AdjournCaseTemplateBodyBuilder adjournCaseBuilder, SscsCaseData caseData) {
+        HearingDetails finalHearing = getLastValidHearing(caseData);
+        if (finalHearing != null) {
+            if (finalHearing.getHearingDate() != null) {
+                adjournCaseBuilder.heldOn(LocalDate.parse(finalHearing.getHearingDate()));
+            }
+            if (finalHearing.getVenue() != null) {
+                String venueName = venueDataLoader.getGapVenueName(finalHearing.getVenue(), finalHearing.getVenueId());
+                if (venueName != null) {
+                    adjournCaseBuilder.heldAt(venueName);
                 }
             }
         } else {
-            adjournCaseBuilder.heldOn(LocalDate.now());
-            adjournCaseBuilder.heldAt(IN_CHAMBERS);
+            setInChambers(adjournCaseBuilder);
         }
-        return venue;
+    }
+
+    private void setInChambers(AdjournCaseTemplateBodyBuilder adjournCaseBuilder) {
+        adjournCaseBuilder.heldOn(LocalDate.now());
+        adjournCaseBuilder.heldAt(IN_CHAMBERS);
     }
 
     @Override
@@ -326,15 +359,20 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
             throw new IllegalStateException("Unable to obtain signed in user name");
         }
         names.add(signedInJudgeName);
-        if (org.apache.commons.lang3.StringUtils.isNotBlank(caseData.getAdjournment().getDisabilityQualifiedPanelMemberName())) {
-            names.add(caseData.getAdjournment().getDisabilityQualifiedPanelMemberName());
+
+        Adjournment adjournment = caseData.getAdjournment();
+
+        if (adjournmentFeature) {
+            List<JudicialUserBase> panelMembers = adjournment.getPanelMembers();
+            names.addAll(judicialRefDataService.getAllJudicialUsersFullNames(panelMembers));
+        } else {
+            List<String> panelMembers = Stream.of(adjournment.getDisabilityQualifiedPanelMemberName(),
+                adjournment.getMedicallyQualifiedPanelMemberName(), adjournment.getOtherPanelMemberName())
+                .filter(org.apache.commons.lang3.StringUtils::isNotBlank).toList();
+
+            names.addAll(panelMembers);
         }
-        if (org.apache.commons.lang3.StringUtils.isNotBlank(caseData.getAdjournment().getMedicallyQualifiedPanelMemberName())) {
-            names.add(caseData.getAdjournment().getMedicallyQualifiedPanelMemberName());
-        }
-        if (org.apache.commons.lang3.StringUtils.isNotBlank(caseData.getAdjournment().getOtherPanelMemberName())) {
-            names.add(caseData.getAdjournment().getOtherPanelMemberName());
-        }
+
         return StringUtils.getGramaticallyJoinedStrings(names);
     }
 
